# ron-schema-validator

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  clippy.toml
.claude/: settings.local.json
ron-schema/: Cargo.toml
ron-schema-cli/: Cargo.toml
ron-schema-cli/src/: main.rs
ron-schema-cli/tests/: json_output.rs
ron-schema-cli/tests/fixtures/: bad.ronschema  import-invalid-variant.ron  import-missing.ronschema  import-valid.ron  importing.ronschema  item.ronschema  missing-field.ron  out-of-order.ron  parse-error.ron  shared-types.ronschema  type-mismatch.ron  valid.ron
ron-schema/src/: diagnostic.rs  error.rs  format.rs  infer.rs  lib.rs  resolve.rs  span.rs  validate.rs
ron-schema/src/ron/: mod.rs  parser.rs
ron-schema/src/schema/: mod.rs  parser.rs
