[package]
name = "ron-schema-cli"
version = "0.8.0"
edition = "2021"
description = "CLI tool for validating RON files against schemas"
license = "MIT"
repository = "https://github.com/Bradley-Hunter/ron-schema-validator"
readme = "../README.md"
keywords = ["ron", "schema", "validation", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "ron-schema"
path = "src/main.rs"

[dependencies]
ron-schema = { version = "0.8.0", path = "../ron-schema" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
serde_json = "1"