[package]
name = "ron-schema"
version = "1.0.0"
edition = "2021"
description = "Schema definition and validation for RON (Rusty Object Notation) files"
license = "MIT"
repository = "https://github.com/Bradley-Hunter/ron-schema-validator"
readme = "../README.md"
keywords = ["ron", "schema", "validation", "parser"]
categories = ["parser-implementations", "config"]

[features]
regex = ["dep:regex"]

[dependencies]
regex = { version = "1", optional = true }

[lints.rust]
missing_docs = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"